First update to snapshot. Removed patchouli support because it is not yet updated. JSON's still exist though.